add file input component
update add credentials controller

more updates to add-edit credentials controller

--- a/awx/ui/client/lib/components/input/textarea-secret.partial.html
+++ b/awx/ui/client/lib/components/input/textarea-secret.partial.html
@@ -11,10 +11,11 @@
                 </button>
             </div>
             <input ng-show="ssh"
+                   ng-disabled="state._disabled || form.disabled"
                    class="at-InputFile--hidden"
                    ng-class="{'at-InputFile--drag': drag }"
                    type="file"
-                   name="files" />
+                   name="files"/>
             <textarea class="form-control at-Input at-InputTextarea"
                       ng-model="state[state._activeModel]"
                       ng-class="{ 'at-Input--rejected': state._rejected }"
